rezolve merge conflict

--- a/src/Config/user_local.props
+++ b/src/Config/user_local.props
@@ -9,5 +9,6 @@
   </PropertyGroup>
   <PropertyGroup>
     <REVITAPI Condition=" !Exists('$(REVITAPI)') ">E:\RevitVersion\2025\Releasex64_NET7_20230907\Releasex64</REVITAPI>
+    <REVITAPI Condition=" !Exists('$(REVITAPI)') ">D:\Revit\Dev\revit\Debugx64</REVITAPI>
   </PropertyGroup>
 </Project>
