--- a/src/DynamoRevitIcons/DynamoRevitIcons.csproj
+++ b/src/DynamoRevitIcons/DynamoRevitIcons.csproj
@@ -50,10 +50,16 @@
     <GetReferenceAssemblyPaths TargetFrameworkMoniker=".NETFramework, Version=v4.8">
       <Output TaskParameter="FullFrameworkReferenceAssemblyPaths" PropertyName="FrameworkAssembliesPath" />
     </GetReferenceAssemblyPaths>
+	  <GetAssemblyIdentity
+        AssemblyFiles="$(OutputPath)..\DynamoAddinGenerator.exe">
+		  <Output
+			  TaskParameter="Assemblies"
+			  ItemName="MyAssemblyIdentities"/>
+	  </GetAssemblyIdentity>
     <GenerateResource SdkToolsPath="$(TargetFrameworkSDKToolsDirectory)" UseSourcePath="true" Sources="$(ProjectDir)RevitNodesImages.resx" OutputResources="$(ProjectDir)RevitNodesImages.resources" References="$(FrameworkAssembliesPath)System.Drawing.dll" />
-    <AL TargetType="library" EmbedResources="$(ProjectDir)RevitNodesImages.resources" FileVersion="2.16.3" ProductName="Dynamo For Revit 2023" ProductVersion="2.16.1" Copyright="Copyright © Autodesk, Inc 2017-2018" OutputAssembly="$(OutputPath)RevitNodes.customization.dll" />
+    <AL TargetType="library" EmbedResources="$(ProjectDir)RevitNodesImages.resources" FileVersion="%(MyAssemblyIdentities.Version)" ProductName="Dynamo For Revit 2023" ProductVersion="%(MyAssemblyIdentities.Version)" Copyright="Copyright © Autodesk, Inc 2017-2018" OutputAssembly="$(OutputPath)RevitNodes.customization.dll" />
     <GenerateResource SdkToolsPath="$(TargetFrameworkSDKToolsDirectory)" UseSourcePath="true" Sources="$(ProjectDir)DSRevitNodesUIImages.resx" OutputResources="$(ProjectDir)DSRevitNodesUIImages.resources" References="$(FrameworkAssembliesPath)System.Drawing.dll" />
-    <AL TargetType="library" EmbedResources="$(ProjectDir)DSRevitNodesUIImages.resources" FileVersion="2.16.3" ProductName="Dynamo For Revit 2023" ProductVersion="2.16.1" Copyright="Copyright © Autodesk, Inc 2017-2018" OutputAssembly="$(OutputPath)DSRevitNodesUI.customization.dll" />
+    <AL TargetType="library" EmbedResources="$(ProjectDir)DSRevitNodesUIImages.resources" FileVersion="%(MyAssemblyIdentities.Version)" ProductName="Dynamo For Revit 2023" ProductVersion="%(MyAssemblyIdentities.Version)" Copyright="Copyright © Autodesk, Inc 2017-2018" OutputAssembly="$(OutputPath)DSRevitNodesUI.customization.dll" />
   </Target>
   <Target Name="AfterBuild">
     <ItemGroup>
