--- a/src/Config/user_local.props
+++ b/src/Config/user_local.props
@@ -9,6 +9,6 @@
   </PropertyGroup>
   <PropertyGroup>
     <REVITAPI Condition=" !Exists('$(REVITAPI)') ">$(SolutionDir)..\lib\Revit Preview Release\net8.0</REVITAPI>
-    <!--<REVITAPI Condition=" !Exists('$(REVITAPI)') ">D:\src\git.adsk\revit\Debugx64</REVITAPI>-->
+    <REVITAPI Condition=" !Exists('$(REVITAPI)') ">D:\src\git.adsk\revit\Debugx64</REVITAPI>
   </PropertyGroup>
 </Project>
