--- a/.adsk/ContinuousLocalization.yml
+++ b/.adsk/ContinuousLocalization.yml
@@ -28,3 +28,4 @@ common:
       file_rules:
         - doc\distrib\NodeHelpFiles\en-US\fallback_docs\*.md, doc\distrib\NodeHelpFiles\%langMsNet%\fallback_docs\*.md
         - doc\distrib\Templates\en-US\*.dyn, doc\distrib\Templates\%langMsNet%\*.dyn
+        - doc\distrib\Templates\en-US\filenames.json, doc\distrib\Templates\%langMsNet%\filenames.json
