--- a/src/Config/CS_SDK.props
+++ b/src/Config/CS_SDK.props
@@ -1,11 +1,10 @@
 <Project>
 	<Import Project="$(SolutionDir)Config/user_local.props" />
 	<PropertyGroup>
-		<Platforms>NET70;NET80</Platforms>
+		<Platforms>NET70;NET80;NET80_DA</Platforms>
 		<PlatformTarget >x64</PlatformTarget>
-		<TargetFramework Condition="'$(Platform)' == 'NET80'">net8.0-windows</TargetFramework>
-		<TargetFramework Condition="'$(Platform)' == 'NET70'">net7.0-windows</TargetFramework>
-		<TargetFramework Condition="'$(Platform)' == 'NET60'">net6.0-windows</TargetFramework>
+		<TargetFramework Condition="$(Platform.Contains('NET80'))">net8.0-windows</TargetFramework>
+		<TargetFramework Condition="$(Platform.Contains('NET70'))">net7.0-windows</TargetFramework>
 		<TargetFramework Condition="'$(Platform)' == 'net48'">net48</TargetFramework>
 		<VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">17.0</VisualStudioVersion>
 		<RevitVersionNumber Condition=" '$(RevitVersionNumber)' == '' ">Preview Release</RevitVersionNumber>
@@ -20,8 +19,8 @@
 
 		<DYNAMOTESTAPI Condition=" '$(DYNAMOTESTAPI)' == '' ">C:\Program Files\Dynamo 0.7</DYNAMOTESTAPI>
 
-		<DCoreLibSubFolder Condition="'$(Platform)' == 'NET80'">net8.0</DCoreLibSubFolder>
-		<DCoreLibSubFolder Condition="'$(Platform)' == 'NET70'">net6.0</DCoreLibSubFolder>
+		<DCoreLibSubFolder Condition="$(Platform.Contains('NET80'))">net8.0</DCoreLibSubFolder>
+		<DCoreLibSubFolder Condition="$(Platform.Contains('NET70'))">net7.0</DCoreLibSubFolder>
 		<DCoreLibSubFolder Condition="'$(Platform)' == 'NET60'">net6.0</DCoreLibSubFolder>
 		<REVITAPI Condition=" !Exists('$(REVITAPI)') ">$(SolutionDir)..\lib\Revit $(RevitVersionNumber)\$(DCoreLibSubFolder)</REVITAPI>
 		<REVITAPI Condition=" !Exists('$(REVITAPI)') ">C:\Program Files\Autodesk\Revit Architecture $(RevitVersionNumber)</REVITAPI>
